<resources>
    <string name="app_name">TicTacToe</string>
    <string name="x">x</string>
    <string name="y">0</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="new_game">NEW GAME</string>
    <string name="bottom_navigation">Tic Tac Toe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="ranking">Ranking</string>
    <string name="back">Back</string>
</resources>